<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Person"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicer_form"
            android:textSize="30dp"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="80dp"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        android:layout_marginTop="50dp">


        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/first_name"
            android:text="Abc"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout

        android:id="@+id/txt_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        android:layout_marginTop="140dp">


        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/last_name"
            android:text="cba"/>
    </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout

                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_below="@id/txt_lastname"
                android:layout_marginTop="10dp">


                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="abc@gmail.com"
                    android:hint="Email address" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout

                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_below="@id/txt_email"
                android:layout_marginTop="10dp">


                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="abc@12345"
                    android:hint="Password" />
            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:id="@+id/txt_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_below="@id/txt_password"
            android:layout_marginTop="10dp">


            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"

                android:hint="@string/gender"
                android:text="Male"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:id="@+id/txt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_below="@id/txt_gender"
            android:layout_marginTop="10dp">


            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/address"
                android:text="hhfdjhhjdhjdhfjhfdj"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:id="@+id/txt_pincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_address"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="4"
            android:layout_marginTop="10dp">


            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|number"
                android:hint="@string/pincode"
                android:text="4567"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_mobileno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_below="@id/txt_pincode"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            android:layout_marginTop="10dp">


            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/mobile_no"
                android:text="86999999"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_workinghours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            android:layout_below="@id/txt_mobileno"
            android:layout_marginTop="10dp">


            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/working_hours"
                android:text="5hours"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/txt_workinghours"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Skill"
                android:textSize="20dp"
                android:layout_margin="8dp"
                android:textStyle="normal" />

            <RadioGroup
                android:id="@+id/rg_skill"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="5dp">

                <RadioButton
                    android:id="@+id/rb_maid"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:text="@string/mai" />

                <RadioButton
                    android:id="@+id/rb_elect"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:text="@string/electricia"/>
                <RadioButton
                    android:id="@+id/rb_plumber"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/plumbe" />

                <RadioButton
                    android:id="@+id/rb_chef"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/chef"/>


            </RadioGroup>


        </LinearLayout>
        <Button
            android:id="@+id/btn_hireperson"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/ll"
            android:background="@drawable/button_corners"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:text="@string/hire_person"/>

    </RelativeLayout>


</ScrollView>